re PR target/11693 ([ia64] ICE in gen_nop_type)

PR target/11693
        * config/ia64/ia64.c (ia64_emit_nops): Skip L slots when
        padding before inline assembly.

From-SVN: r70306